--- a/source/layout.html
+++ b/source/layout.html
@@ -161,78 +161,81 @@
         {% if theme.show_related_products %}
           {% assign related_products_header = theme.related_products_header | default: 'You might also like' %}
           {% assign related_products_collection = product.related_products %}
-          <aside class="related-products-container" data-num-products="{{ related_products_limit }}" role="complementary" aria-label="{{ related_products_header }}">
-            <div class="wrapper">
-              <div class="related-products-header">
-                <h2 class="related-products-title">{{ related_products_header }}</h2>
-              </div>
-              <div class="product-list-container">
-                <div class="related-product-list product-list">
-                  {% for related_product in related_products_collection %}
-                    {% assign related_product_status = '' %}
-                    {% case related_product.status %}
-                      {% when 'active' %}
-                        {% if related_product.on_sale %}{% assign related_product_status = 'On sale' %}{% endif %}
-                      {% when 'sold-out' %}
-                        {% assign related_product_status = 'Sold out' %}
-                      {% when 'coming-soon' %}
-                        {% assign related_product_status = 'Coming soon' %}
-                    {% endcase %}
-                    {% capture related_product_status_class %}{% if related_product.status == 'active' and related_product.on_sale %}status-primary{% else %}status-secondary{% endif %}{% endcapture %}
-                    <div class="product-list-thumb {{ related_product.css_class }}">
-                      <a class="product-list-link{% if related_product.images[1] != blank and theme.secondary_image_on_hover == true %} product-list-link--show-secondary{% endif %}" href="{{ related_product.url }}" title="View {{ related_product.name | escape }}">
-                        <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
-                          <img
-                            alt=""
-                            class="blur-up product-list-image product-list-image--primary lazyload grid-{{ theme.grid_image_style }}"
-                            src="{{ related_product.image | product_image_url | constrain: 20 }}"
-                            {% unless theme.grid_image_style == 'default' %}data-aspectratio="{{ related_product.image.width | divided_by: related_product.image.height }}"{% endunless %}
-                            data-srcset="
-                              {{ related_product.image | product_image_url | constrain: 240 }} 240w,
-                              {{ related_product.image | product_image_url | constrain: 400 }} 400w,
-                              {{ related_product.image | product_image_url | constrain: 600 }} 600w,
-                              {{ related_product.image | product_image_url | constrain: 800 }} 800w,
-                              {{ related_product.image | product_image_url | constrain: 960 }} 960w,
-                              {{ related_product.image | product_image_url | constrain: 1200 }} 1200w
-                            "
-                            data-sizes="auto"
-                          >
-                          {% if related_product.images[1] != blank and theme.secondary_image_on_hover == true %}
+
+          {% if related_products_collection.size > 0 %}
+            <aside class="related-products-container" data-num-products="{{ related_products_limit }}" role="complementary" aria-label="{{ related_products_header }}">
+              <div class="wrapper">
+                <div class="related-products-header">
+                  <h2 class="related-products-title">{{ related_products_header }}</h2>
+                </div>
+                <div class="product-list-container">
+                  <div class="related-product-list product-list">
+                    {% for related_product in related_products_collection %}
+                      {% assign related_product_status = '' %}
+                      {% case related_product.status %}
+                        {% when 'active' %}
+                          {% if related_product.on_sale %}{% assign related_product_status = 'On sale' %}{% endif %}
+                        {% when 'sold-out' %}
+                          {% assign related_product_status = 'Sold out' %}
+                        {% when 'coming-soon' %}
+                          {% assign related_product_status = 'Coming soon' %}
+                      {% endcase %}
+                      {% capture related_product_status_class %}{% if related_product.status == 'active' and related_product.on_sale %}status-primary{% else %}status-secondary{% endif %}{% endcapture %}
+                      <div class="product-list-thumb {{ related_product.css_class }}">
+                        <a class="product-list-link{% if related_product.images[1] != blank and theme.secondary_image_on_hover == true %} product-list-link--show-secondary{% endif %}" href="{{ related_product.url }}" title="View {{ related_product.name | escape }}">
+                          <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
                             <img
                               alt=""
-                              class="blur-up product-list-image product-list-image--secondary lazyload grid-{{ theme.grid_image_style }}"
-                              src="{{ related_product.images[1] | product_image_url | constrain: 20 }}"
+                              class="blur-up product-list-image product-list-image--primary lazyload grid-{{ theme.grid_image_style }}"
+                              src="{{ related_product.image | product_image_url | constrain: 20 }}"
                               {% unless theme.grid_image_style == 'default' %}data-aspectratio="{{ related_product.image.width | divided_by: related_product.image.height }}"{% endunless %}
                               data-srcset="
-                                {{ related_product.images[1] | product_image_url | constrain: 240 }} 240w,
-                                {{ related_product.images[1] | product_image_url | constrain: 400 }} 400w,
-                                {{ related_product.images[1] | product_image_url | constrain: 600 }} 600w,
-                                {{ related_product.images[1] | product_image_url | constrain: 800 }} 800w,
-                                {{ related_product.images[1] | product_image_url | constrain: 960 }} 960w,
-                                {{ related_product.images[1] | product_image_url | constrain: 1200 }} 1200w
+                                {{ related_product.image | product_image_url | constrain: 240 }} 240w,
+                                {{ related_product.image | product_image_url | constrain: 400 }} 400w,
+                                {{ related_product.image | product_image_url | constrain: 600 }} 600w,
+                                {{ related_product.image | product_image_url | constrain: 800 }} 800w,
+                                {{ related_product.image | product_image_url | constrain: 960 }} 960w,
+                                {{ related_product.image | product_image_url | constrain: 1200 }} 1200w
                               "
                               data-sizes="auto"
                             >
-                          {% endif %}
-                          {% if related_product_status != blank %}<div class="product-list-thumb-status {{ related_product_status_class }}">{{ related_product_status }}</div>{% endif %}
-                        </div>
-                        <div class="product-list-thumb-info">
-                          <div class="product-list-thumb-name">{{ related_product.name }}</div>
-                          <div class="product-list-thumb-price">
-                            {% if related_product.variable_pricing %}
-                              {{ related_product.min_price | money: theme.money_format }} - {{ related_product.max_price | money: theme.money_format }}
-                            {% else %}
-                              {{ related_product.default_price | money: theme.money_format }}
+                            {% if related_product.images[1] != blank and theme.secondary_image_on_hover == true %}
+                              <img
+                                alt=""
+                                class="blur-up product-list-image product-list-image--secondary lazyload grid-{{ theme.grid_image_style }}"
+                                src="{{ related_product.images[1] | product_image_url | constrain: 20 }}"
+                                {% unless theme.grid_image_style == 'default' %}data-aspectratio="{{ related_product.image.width | divided_by: related_product.image.height }}"{% endunless %}
+                                data-srcset="
+                                  {{ related_product.images[1] | product_image_url | constrain: 240 }} 240w,
+                                  {{ related_product.images[1] | product_image_url | constrain: 400 }} 400w,
+                                  {{ related_product.images[1] | product_image_url | constrain: 600 }} 600w,
+                                  {{ related_product.images[1] | product_image_url | constrain: 800 }} 800w,
+                                  {{ related_product.images[1] | product_image_url | constrain: 960 }} 960w,
+                                  {{ related_product.images[1] | product_image_url | constrain: 1200 }} 1200w
+                                "
+                                data-sizes="auto"
+                              >
                             {% endif %}
+                            {% if related_product_status != blank %}<div class="product-list-thumb-status {{ related_product_status_class }}">{{ related_product_status }}</div>{% endif %}
                           </div>
-                        </div>
-                      </a>
-                    </div>
-                  {% endfor %}
+                          <div class="product-list-thumb-info">
+                            <div class="product-list-thumb-name">{{ related_product.name }}</div>
+                            <div class="product-list-thumb-price">
+                              {% if related_product.variable_pricing %}
+                                {{ related_product.min_price | money: theme.money_format }} - {{ related_product.max_price | money: theme.money_format }}
+                              {% else %}
+                                {{ related_product.default_price | money: theme.money_format }}
+                              {% endif %}
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    {% endfor %}
+                  </div>
                 </div>
               </div>
-            </div>
-          </aside>
+            </aside>
+          {% endif %}
         {% endif %}
       {% endif %}
     </main>
