--- a/source/contact.html
+++ b/source/contact.html
@@ -9,6 +9,9 @@
 {% if contact.sent %}
   <div class="message-banner message-banner--no-bg message-banner--centered">Thanks! Your message has been sent and we'll get back to you soon.</div>
 {% else %}
+  {% if theme.contact_text %}
+    <div class="message-banner message-banner--contact">{{ theme.contact_text }}</div>
+  {% endif %}
   <form method="post" action="/contact" class="contact-form">
     <div class="contact-form-block contact-name">
       <label class="contact-label" for="name">Name</label>
