--- a/source/home.html
+++ b/source/home.html
@@ -6,9 +6,31 @@
   </div>
 {% endif %}
 
-{% if theme.welcome_image or theme.welcome_text != blank %}
+{% assign has_slideshow = false %}
+{% if theme.image_sets.slideshow.size > 0 %}
+  {% assign has_slideshow = true %}
+{% endif %}
+
+{% if theme.welcome_image or has_slideshow or theme.welcome_text != blank %}
   <div class="home-welcome stacked">
-    {% if theme.welcome_image %}
+    {% if has_slideshow %}
+      <div class="{% if theme.image_sets.slideshow.size > 1 %}splide{% endif %} home-slideshow">
+        <div class="splide__track">
+          <div class="splide__list">
+            {% for image in theme.image_sets.slideshow %}
+              <div class="splide__slide">
+                <img
+                  alt="Slideshow image {{ forloop.index }}"
+                  {% if forloop.index == 1 %}fetchpriority="high"{% else %}loading="lazy"{% endif %}
+                  class="slideshow-image"
+                  srcset="{{ image.url | constrain: 1068 }}, {{ image.url | constrain: 2136 }} 2x"
+                  src="{{ image.url | constrain: 1068 }}">
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    {% elsif theme.welcome_image %}
       <img
         alt=""
         class="lazyload welcome-image blur-up"
@@ -21,6 +43,9 @@
         "
         data-sizes="auto"
       >
+    {% endif %}
+    {% if has_slideshow == false %}
+      <div class="welcome-overlay"></div>
     {% endif %}
     {% if theme.welcome_text != blank %}
       <div class="welcome-message{% if theme.welcome_image %} with-image{% endif %}">
