--- a/source/cart.html
+++ b/source/cart.html
@@ -69,8 +69,19 @@
           </div>
           <div class="cart-submit">
             <button type="submit" name="checkout" class="button button--checkout">Checkout</button>
-            <a class="button button--minimal" href="/products">Continue Shopping</a>
           </div>
+          {% if theme.show_bnpl_messaging and cart.items != blank %}
+            {% unless theme.features.opt_outs contains "theme_bnpl_messaging" %}
+              <div id="payment-processor-messaging">
+                <div id="paypal-messaging-container" style="height: 0; overflow: hidden;">
+                  <div id="paypal-messaging-element"></div>
+                </div>
+                <div id="stripe-messaging-container" style="height: 0; overflow: hidden;">
+                  <div id="payment-method-messaging-element"></div>
+                </div>
+              </div>
+            {% endunless %}
+          {% endif %}
         </div>
       </div>
     </form>
